example/secondfile/objects/End_User_Support_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>AT_T_Resolution_Notes__c</fullName>
        <label>AT&amp;T Resolution Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AT_T__c</fullName>
        <label>AT&amp;T Closed Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application maintenance</fullName>
                </value>
                <value>
                    <fullName>Deferred(CR)</fullName>
                </value>
                <value>
                    <fullName>Issue fixed</fullName>
                </value>
                <value>
                    <fullName>Not an Issue</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Resolution_Date_Time__c</fullName>
        <label>Actual Resolution Date\Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_User_Support_Ticket__c</fullName>
        <displayFormat>EU-{0000}</displayFormat>
        <label>End User Support Ticket #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Error_Message_Received__c</fullName>
        <label>Error Message Received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Support_Ticket__c</fullName>
        <label>IT Support Ticket #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logged_Date_Time__c</fullName>
        <label>Logged Date\Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_AT_T__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner AT&amp;T</label>
        <referenceTo>User</referenceTo>
        <relationshipName>End_User_Support_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Work_Phone__c</fullName>
        <label>Owner Work Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Related_IT_Support_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look Up Field To the Related IT Ticket</description>
        <inlineHelpText>Look Up Field To the Related IT Ticket</inlineHelpText>
        <label>Related IT Support Ticket</label>
        <referenceTo>IT_Support_Ticket__c</referenceTo>
        <relationshipLabel>End User Support Tickets</relationshipLabel>
        <relationshipName>End_User_Support_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Credit Validations</fullName>
                </value>
                <value>
                    <fullName>Data Access</fullName>
                </value>
                <value>
                    <fullName>Data Mismatch with ROME</fullName>
                </value>
                <value>
                    <fullName>Data Mismatch with BID</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>General Field Update</fullName>
                </value>
                <value>
                    <fullName>General Process Flow</fullName>
                </value>
                <value>
                    <fullName>Deal Registration Approval</fullName>
                </value>
                <value>
                    <fullName>Lead Conversion</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>SI/VAR-API</fullName>
                </value>
                <value>
                    <fullName>Sign on</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Approval</fullName>
                </value>
                <value>
                    <fullName>SP Products</fullName>
                </value>
                <value>
                    <fullName>User Creation/Deletion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>On/Off cart deals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <label>Requestor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Resolution_Owner__c</fullName>
        <label>Resolution Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <formula>ABS(LastModifiedDate  -  Logged_Date_Time__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenshot Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                    <default>true</default>
                    <label>4 - Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>When a request is in an &quot;AT&amp;T&quot; status, it is being handled by the AT&amp;T Triage team. If a request is in an &quot;IT&quot; status, it is assigned to the IT Support team.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open (AT&amp;T)</fullName>
                    <default>true</default>
                    <label>Open (AT&amp;T)</label>
                </value>
                <value>
                    <fullName>In Progress (AT&amp;T)</fullName>
                </value>
                <value>
                    <fullName>Closed (AT&amp;T)</fullName>
                </value>
                <value>
                    <fullName>Open (IT)</fullName>
                </value>
                <value>
                    <fullName>In Progress (IT)</fullName>
                </value>
                <value>
                    <fullName>Closed (IT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce_Error__c</fullName>
        <label>Steps to Reproduce Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Upload Request</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>End User Support Ticket</label>
    <listViews>
        <fullName>AKirakosyan</fullName>
        <columns>NAME</columns>
        <columns>End_User_Support_Ticket__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>AKirakosyan</label>
    </listViews>
    <listViews>
        <fullName>Pending_Tickets</fullName>
        <columns>End_User_Support_Ticket__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Steps_to_Reproduce_Error__c</columns>
        <columns>IT_Support_Ticket__c</columns>
        <columns>Logged_Date_Time__c</columns>
        <columns>Related_To__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tickets</label>
    </listViews>
    <nameField>
        <label>End User Support Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>End User Support Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>